Bug 434285 - Panel Opacity setting isn't remembered
Summary: Panel Opacity setting isn't remembered
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Other Linux
: VHI normal
Target Milestone: 1.0
Assignee: veggero
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-11 15:29 UTC by Ahmad Samir
Modified: 2021-04-29 15:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ahmad Samir 2021-03-11 15:29:31 UTC
If I change the panel "Opacity" setting to anything other than "Adaptive", the setting is always reverted to Adaptive upon restart.
Comment 1 Nate Graham 2021-03-11 19:41:33 UTC
Can confirm. Gotta fix before 5.22.
Comment 2 Nate Graham 2021-04-14 01:09:59 UTC
Raising to VHI so we don't forget to fix this before 5.22.
Comment 3 Bug Janitor Service 2021-04-23 22:03:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/812
Comment 4 Bug Janitor Service 2021-04-26 18:57:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/819
Comment 5 Nate Graham 2021-04-29 15:48:24 UTC
Git commit 1cf02aad96bfe650a1f4d1465ae15234205fb061 by Nate Graham, on behalf of Bharadwaj Raju.
Committed on 29/04/2021 at 15:47.
Pushed by ngraham into branch 'master'.

Load panelOpacity from config parent, not from config
FIXED-IN: 5.22

M  +1    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/1cf02aad96bfe650a1f4d1465ae15234205fb061