Set the config for Adaptive Transparency to config and configDefaults instead of config parent

BUG: 434285
FIXED-IN: 5.22